# ToolBox

./: CODEBASE_REVIEW.md  CONTAINER_SECURITY.md  DEPLOYMENT_GUIDE.md  Dockerfile.mcp  Dockerfile.otel  Dockerfile.ubi8  LICENSE  LOCAL_TEST.md  MCP_SERVER.md  OPENTELEMETRY.md  PLAN.md  PRODUCTION_IMAGES.md  QUICKSTART.md  README.md  SECURITY_ANALYSIS.md  SECURITY_SUMMARY.md  SETUP_GUIDE.md  TICKETS.md  USAGE.md  alembic.ini  docker-compose.full.yml  docker-compose.litellm.yml  docker-compose.mcp-inspector.yml  docker-compose.test.yml  docker-compose.yml  k8s-toolbox-mcp.sh  litellm-config.yaml  mcp-8080-proxy.py  mcp-inspector-k8s.sh  mcp-inspector-proxy.py  mcp-proxy.py  mcp-session-proxy.py  mcp-test.html  mock_embedding_server.py  otel-collector-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run-local-mcp.sh  run-mcp-http.sh  (+8 more)
alembic/: env.py
alembic/versions/: 20251210_0000_001_initial_schema.py  20251220_0001_002_fix_embedding_dimension.py
app/: __init__.py  config.py  main.py  mcp_fastmcp_server.py
app/adapters/: __init__.py  litellm_mcp.py
app/api/: __init__.py  admin.py  mcp.py
app/db/: __init__.py  session.py
app/execution/: __init__.py  executor.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  execution.py  tool.py
app/observability/: __init__.py  otel.py
app/registry/: __init__.py  embedding_client.py  embedding_service.py  tool_registry.py  vector_store.py
app/schemas/: __init__.py  mcp.py
app/services/: __init__.py  mcp_discovery.py  summarization.py
app/tools/: __init__.py  base.py  executor.py
app/utils/: __init__.py  http.py  validation.py
config/: litellm-mcp.yaml
docs/: FIX_BATCH_EMBEDDING.md  MIGRATION_EMBEDDING_DIMENSION.md  litellm_integration_guide.md
docs/tickets/: README.md  TICKET-001-summarization-service.md  TICKET-002-call-tool-summarized.md  TICKET-003-summarization-config.md  TICKET-004-update-services-init.md  TICKET-005-integration-tests.md
examples/: comprehensive_demo.py  health_check.py  litellm_integration.py  mcp_api_examples.sh  register_tools.py  search_tools.py  summarization_demo.py
helm/tool-registry/: Chart.yaml  README.md  values-dev.yaml  values-litellm.yaml  values-prod.yaml  values.yaml
infrastructure/k8s/: README.md
infrastructure/sql/: init.sql
k8s/: deploy.sh
k8s/litellm/: config-simple.yaml  config-working.yaml  configmap.yaml  deployment-fixed.yaml  deployment.yaml  mcp-toolbox-configmap.yaml  secrets.yaml  service.yaml
k8s/namespace/: namespace.yaml
k8s/postgres/: configmap.yaml  deployment.yaml  (+3 more)
kubernetes/: README.md  configmap.yaml  deploy.sh  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  network-policy.yaml  postgres.yaml  prod.yaml  rbac.yaml  secrets.yaml  secrets.yaml.example  service.yaml
scripts/: regenerate_embeddings.py  run-mcp-server.sh  run_migrations.sh  start-with-otel.sh  test_litellm_integration.py  verify_batch_embedding_fix.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_containers.py  test_database.py  test_embedding_client_batch.py  test_embedding_service.py  test_migration_embedding_dimension.py  test_summarization_integration.py  test_tools.py  test_vector_store.py
(+28 files in other folders)
